# doctoLibClon/src/Entity/Patient.php
@@ -59,10 +59,16 @@ class Patient extends User
      */
     private $consultations;
 
+    /**
+     * @ORM\OneToMany(targetEntity=Images::class, mappedBy="patient", cascade={"persist"})
+     */
+    private $images;
+
     public function __construct()
     {
         $this->practicien = new ArrayCollection();
         $this->consultations = new ArrayCollection();
+        $this->images = new ArrayCollection();
     }
 
     public function getId(): ?int
@@ -167,6 +173,36 @@ class Patient extends User
             // set the owning side to null (unless already changed)
             if ($consultation->getPatient() === $this) {
                 $consultation->setPatient(null);
+            }
+        }
+
+        return $this;
+    }
+
+    /**
+     * @return Collection|Images[]
+     */
+    public function getImages(): Collection
+    {
+        return $this->images;
+    }
+
+    public function addImage(Images $image): self
+    {
+        if (!$this->images->contains($image)) {
+            $this->images[] = $image;
+            $image->setPatient($this);
+        }
+
+        return $this;
+    }
+
+    public function removeImage(Images $image): self
+    {
+        if ($this->images->removeElement($image)) {
+            // set the owning side to null (unless already changed)
+            if ($image->getPatient() === $this) {
+                $image->setPatient(null);
             }
         }
 
